Fix de l'overflow x de de la page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -685,6 +685,14 @@ video {
   height: 20rem;
 }
 
+.h-\[calc\(100\%-1rem\)\] {
+  height: calc(100% - 1rem);
+}
+
+.h-\[calc\(100\%-2rem\)\] {
+  height: calc(100% - 2rem);
+}
+
 .h-\[calc\(100\%-5rem\)\] {
   height: calc(100% - 5rem);
 }
@@ -695,14 +703,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[calc\(100\%-1rem\)\] {
-  height: calc(100% - 1rem);
-}
-
-.h-\[calc\(100\%-2rem\)\] {
-  height: calc(100% - 2rem);
 }
 
 .w-0 {
@@ -845,12 +845,12 @@ video {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .overflow-y-scroll {
